--- a/src/styles.css
+++ b/src/styles.css
@@ -18,10 +18,49 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   border-radius: 40px;
-  width: 550px;
+  width: 475px;
   padding: 20px 20px;
-  background: rgba(193, 185, 200, 0.85);
-  box-shadow: 0px 0px 20px 20px #a0a0a0;
+  background: rgba(193, 185, 200, 0.8);
+  box-shadow: 0px 0px 20px 20px #b0b0b0;
+}
+
+select {
+  display: block;
+  width: 100%;
+  border-radius: 15px;
+  padding: 5px;
+  font-size: 18px;
+}
+
+.city {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px dashed rgb(112, 112, 112);
+}
+
+.city:last-child {
+  border: none;
+}
+
+h2 {
+  margin: 0 0 5px;
+  font-size: 35px;
+}
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 20px;
+  vertical-align: middle;
+  line-height: 36px;
 }
 
 .codedBy {
